samples/_failures_safe/1761480095_732629_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09b0c6a8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_09b0c6a8.c:183:48: error: expected ‘]’ at end of input
  183 |             printf("Vertex %d: %d\n", i, dist[i
      |                                                ^
      |                                                ]
./samples/SAFE/__tmp_09b0c6a8.c:183:13: error: expected declaration or statement at end of input
  183 |             printf("Vertex %d: %d\n", i, dist[i
      |             ^~~~~~
./samples/SAFE/__tmp_09b0c6a8.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09b0c6a8.c:183:13: error: expected declaration or statement at end of input
